2000-06-30  Jeffrey Stedfast  <fejj@helixcode.com>

	* broken-date-parser.[c,h]: Utilities for parsing broken
	date strings.
	
	* providers/imap/camel-imap-folder.c (imap_move_message_to): 
	Implemented.

	* camel-mime-utils.c (header_decode_date): Wrote some code to try
	and un-mangle broken date formats and then parse that new string 
	instead.

2000-06-30  Dan Winship  <danw@helixcode.com>

	* camel-folder.c (camel_folder_move_message_to): New function, to
	move a message from one folder to another. The default
	implementation just uses append_message and delete_message, but
	providers can implement more efficient versions for use when both
	folders are on the same store.

2000-06-29  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-folder.c (imap_expunge): Should now
	print a meaningful error message when it doesn't succeed

2000-06-28  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-store.c (imap_connect): Changed to
	keep prompting user for a valid password until it either
	authenticates or until Canceled by the user.
	(camel_imap_command_extended): Improved speed (replaced the
	g_strjoinv call with a faster implementation)

	* providers/pop3/camel-pop3-store.c 
	(camel_pop3_command_get_additional_data): Fixed.
	(pop3_connect): Changed to keep prompting the user for a
	password until it either works or until Canceled by the user.

	* providers/mbox/camel-mbox-summary.c: General cleanup
	(camel_mbox_summary_sync): Fixed a memory leak and added
	CamelException handling.

	* providers/mbox/camel-mbox-store.c (delete_folder): Fixed a 
	memory leak

	* providers/mbox/camel-mbox-folder.c (mbox_append_message): 
	Default 'off_t seek' to -1 so as to make sure it's initialized
	before it's used in the case of a bad stat() call.
	(mbox_sync): Updated
	(mbox_expunge): Updated

2000-06-27  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-store.c (imap_connect): Move the 